[package]
name = "succtree"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE.txt"
description = "A usize-ary Tree for a sweep and prune algorithm"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.test] 
opt-level = 3